--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_attribute/asset_attribute_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产字段配置 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-12 13:04:10
+ * @since 2021-09-12 21:51:27
  */
  -->
  <!DOCTYPE html>
@@ -128,7 +128,7 @@
     var RADIO_REQUIRED_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var RADIO_REQUIREDMODIFY_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusYNEnum')}]];
     var RADIO_COMPONENTTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeComponentTypeEnum')}]];
-    var SELECT_OWNER_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeItemOwnerEnum')}]];
+    var SELECT_OWNER_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetAttributeOwnerEnum')}]];
     var AUTH_PREFIX="eam_asset_attribute";
 
 
