--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-12 15:27:31
+ * @since 2021-09-14 15:27:57
  */
  -->
  <!DOCTYPE html>
@@ -100,7 +100,7 @@
                     <!-- 来源 , sourceId ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('来源')}" class="search-label sourceId-label">来源</span><span class="search-colon">:</span></div>
-                        <div id="sourceId" th:data="${dict.toArray('eam_source')}" style="width:140px"></div>
+                        <div id="sourceId" th:data="${'/service-system/sys-dict-item/query-list?dictCode=eam_source'}" style="width:140px"></div>
                     </div>
 
 
@@ -225,15 +225,13 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var SELECT_ASSETSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
-    var SELECT_SOURCEID_DATA = [[${dict.toArray('eam_source')}]];
-    var COL_DATA = [];
     var AUTH_PREFIX="eam_asset";
 
 
 </script>
 
 <script th:src="'/business/eam/asset/asset_ext.js?'+${cacheKey}"></script>
-
+<script th:src="'/business/eam/asset/asset_list.js?'+${cacheKey}"></script>
 
 </body>
 </html>
